[package]
name = "s2-smart-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
esp-idf-svc = "0.47.1"
log = "0.4.20"

embedded-svc = "0.26.1"

[build-dependencies]
embuild = "0.31.3"
